--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
        <module>chapter_001</module>
 	   <module>chapter_002</module>
 	   <module>chapter_003</module>
+	   <module>chapter_005</module>
     </modules>
 
 	<dependencies>
@@ -83,5 +84,4 @@
 			</plugin>
 		</plugins>
 	</build>	
-
 </project>
