--- a/junior/pom.xml
+++ b/junior/pom.xml
@@ -13,6 +13,27 @@
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      </properties>
 
+	<profiles>
+		<profile>
+			<id>test</id>
+			<properties>
+				<db.url>jdbc:postgresql://127.0.0.1:5432/tracker</db.url>
+				<db.username>postgres</db.username>
+				<db.password>Top01</db.password>
+				<db.driver>org.postgresql.Driver</db.driver>
+			</properties>
+		</profile>
+		<profile>
+			<id>production</id>
+			<properties>
+				<db.url>jdbc:postgresql://127.0.0.1:5432/tracker</db.url>
+				<db.username>postgres</db.username>
+				<db.password>Top01</db.password>
+				<db.driver>org.postgresql.Driver</db.driver>
+			</properties>
+		</profile>
+	</profiles>
+
     <modules>
        <module>chapter_001</module>
 	   <module>chapter_002</module>
@@ -116,5 +137,5 @@
 				</executions>
 			</plugin>
 		</plugins>
-	</build>	
+	</build>
 </project>
