--- a/junior/.travis.yml
+++ b/junior/.travis.yml
@@ -1,12 +1,15 @@
 # используем язык java. Travis CI поддерживает другие языки тоже.
 language: java
+services:
+- postgresql
+before_install:
+- psql -c 'create database tracker;' -U postgres
 # используем режим обычного пользователя для сборки проекта.
-sudo: false
+#sudo: false
 # после выполнения сборки запустить скрипт, который будет собирать статистику по JaCoCo
 # Здесь используется сторонний сервис https://codecov.io/
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
-
+- bash <(curl -s https://codecov.io/bash)
 # Отправлять уведомление на почту mailto:youremail@smtp.ru(Изменить на свою) если сборка упала
 notifications:
   email:
