--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 # используем язык java. Travis CI поддерживает другие языки тоже.
 language: java
-env:
-  global:
-    - CODECOV_TOKEN="6c275c90-b52f-4e28-af8d-810dbbecbc60"
+jdk:
+  - openjdk8
 services:
 - postgresql
 before_install:
