Перенос в директорию vpesterev

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 # используем язык java. Travis CI поддерживает другие языки тоже.
+env:
+  global:
+    - CODECOV_TOKEN="6c275c90-b52f-4e28-af8d-810dbbecbc60"
 language: java
 jdk:
   - openjdk8
