--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 			<properties>
 				<db.url>jdbc:postgresql://127.0.0.1:5432/tracker</db.url>
 				<db.username>postgres</db.username>
-				<db.password>Topenant01</db.password>
+				<db.password>Top01</db.password>
 				<db.driver>org.postgresql.Driver</db.driver>
 			</properties>
 		</profile>
