--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ services:
   - postgresql
 before_install:
   - psql -c 'create database tracker;' -U postgres
+  - psql -c 'create database parser;' -U postgres
 # используем режим обычного пользователя для сборки проекта.
 sudo: false
 # после выполнения сборки запустить скрипт, который будет собирать статистику по JaCoCo
