--- a/pom.xml
+++ b/pom.xml
@@ -144,12 +144,6 @@
 			<artifactId>quartz</artifactId>
 			<version>2.3.1</version>
 		</dependency>
-		<dependency>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-failsafe-plugin</artifactId>
-			<version>3.0.0-M4</version>
-			<!--<scope>test</scope>-->
-		</dependency>
 	</dependencies>
 
 	<build>
@@ -212,6 +206,14 @@
 					<argLine>--enable-preview</argLine>
 				</configuration>
 			</plugin>
+<!--
+			<plugin>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<configuration>
+					<argLine>&#45;&#45;enable-preview</argLine>
+				</configuration>
+			</plugin>
+-->
 		</plugins>
 	</build>
 </project>
