Middle. Блок 1. Multithreading. 2. JCIP. Настройка библиотеки[#283083].

--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,11 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.6</version>
 		</dependency>
+		<dependency>
+			<groupId>net.jcip</groupId>
+			<artifactId>jcip-annotations</artifactId>
+			<version>1.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -242,7 +247,15 @@
                     <target>13</target>
                 </configuration>
             </plugin>
-            <!--
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>13</source>
+					<target>13</target>
+				</configuration>
+			</plugin>
+			<!--
                         <plugin>
                             <artifactId>maven-failsafe-plugin</artifactId>
                             <configuration>
