--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,11 @@
 			<artifactId>jcip-annotations</artifactId>
 			<version>1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.5.3.Final</version>
+		</dependency>
 	</dependencies>
 
 	<build>
